Add big fan into the shutdown script

--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -17,6 +17,7 @@ downstairs_off:
       entity_id:
         - switch.kitchen_light
         - switch.hallway_light
+        - switch.big_fan
         - switch.christmas_tree
     - service: media_player.turn_off
       entity_id:
