--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -143,30 +143,26 @@
     - platform: sun
       event: sunset
   action:
-    - type: turn_on
+    - service: switch.turn_on
       entity_id: switch.kitchen_light
-      domain: switch
     - delay:
         hours: 0
         minutes: 3
         seconds: 45
         milliseconds: 0
-    - type: turn_on
+    - service: light.turn_on
       entity_id: light.bedroom_lamp
-      domain: light
     - delay:
         hours: 1
         minutes: 30
         seconds: 0
         milliseconds: 0
-    - type: turn_off
+    - service: switch.turn_off
       entity_id: switch.kitchen_light
-      domain: switch
     - delay:
         hours: 0
         minutes: 45
         seconds: 0
         milliseconds: 0
-    - type: turn_off
+    - service: light.turn_off
       entity_id: light.bedroom_lamp
-      domain: light
