--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,7 +14,7 @@ media_player: !include integrations/media_player.yaml
 sensor: !include integrations/sensor.yaml
 sonoff: !include integrations/sonoff.yaml
 tts: !include integrations/tts.yaml
-yeelight: !include integrations/yeelight.yaml
+# yeelight: !include integrations/yeelight.yaml
 zone: !include integrations/zone.yaml
 
 group: !include groups.yaml
