--- a/integrations/sensor.yaml
+++ b/integrations/sensor.yaml
@@ -24,10 +24,8 @@
       friendly_name: "Washing Machine"
       value_template: >
         {% set washer_state = states('sensor.washing_machine_washer_job_state') %}
-        {% set off_states = ["none", "finish"] %}
+        {% set off_states = ["none", "finish","weightSensing", "delayWash"] %}
         {%- if washer_state in off_states -%}Off
-        {%- elif washer_state == "weightSensing" -%}Weighing
-        {%- elif washer_state == "delayWash" -%}Delay
         {%- elif washer_state == "rinse" -%}Rinsing
         {%- elif washer_state == "spin" -%}Spinning
         {%- elif washer_state == "wash" -%}Washing
