--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -114,7 +114,7 @@
     - service: switch.turn_on
       entity_id: switch.kitchen_light
     - service: light.turn_on
-      entity_id: light.bedroom_lamp
+      entity_id: light.bedroom_light
 
 - alias: Light - Toggle Office using Cube
   trigger:
@@ -151,7 +151,7 @@
         seconds: 45
         milliseconds: 0
     - service: light.turn_on
-      entity_id: light.bedroom_lamp
+      entity_id: light.bedroom_light
     - delay:
         hours: 1
         minutes: 30
@@ -165,4 +165,4 @@
         seconds: 0
         milliseconds: 0
     - service: light.turn_off
-      entity_id: light.bedroom_lamp
+      entity_id: light.bedroom_light
