--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -43,7 +43,7 @@ kids_room_off:
 bedroom_off:
   sequence:
     - service: light.turn_off
-      entity_id: light.bedroom_lamp
+      entity_id: light.bedroom_light
     - service: media_player.turn_off
       entity_id: media_player.bedroom_speaker
     - service: fan.turn_off
