--- a/scripts/lights.yaml
+++ b/scripts/lights.yaml
@@ -4,7 +4,15 @@ sunset_bedroom:
       entity_id: light.bedroom_light_2
     - service: light.turn_off
       entity_id: light.bedroom_light_1
+    - delay: '00:00:05'
     - service: light.turn_off
       data:
         entity_id: light.bedroom_light_2
+        transition: 900
+
+sunset_kids_room:
+  sequence:
+    - service: light.turn_off
+      data:
+        entity_id: light.kids_room_light
         transition: 900
