--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -118,7 +118,7 @@ play_radio_kids_room:
   sequence:
     - service: media_player.play_media
       data_template:
-        entity_id: media_player.play_radio_kids_room
+        entity_id: media_player.kids_room_speaker
         media_content_type: music
         media_content_id: >
           {% if is_state("input_select.play_radio_kids_room", "Český rozhlas Radiožurnál") %}https://ice7.radia.cz/cro1-128.aac
