--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -67,5 +67,7 @@ office_off:
 
 loft_off:
   sequence:
+    - service: light.turn_off
+      entity_id: light.loft_light
     - service: media_player.turn_off
       entity_id: media_player.loft_speaker
