--- a/scripts/media.yaml
+++ b/scripts/media.yaml
@@ -24,13 +24,9 @@ play_radio_kids_room:
 
 turn_xbox_off:
   sequence:
-    condition:
-      condition: not
-      conditions:
-        - condition: state
-          entity_id: media_player.xboxone
-          state: 'off'
+    - condition: state
+      entity_id: media_player.xboxone
+      state: "on"
     - service: media_player.turn_off
       entity_id: media_player.xboxone
-
 
