--- a/scripts/rooms.yaml
+++ b/scripts/rooms.yaml
@@ -21,8 +21,8 @@ downstairs_off:
         - switch.hallway_light
         - switch.big_fan
         - switch.christmas_tree
-    - service: turn_xbox_off
-    - service: turn_tv_off
+    - service: script.turn_xbox_off
+    - service: script.turn_tv_off
     - service: media_player.turn_off
       entity_id: media_player.downstairs_speakers
 
