--- a/scripts/media.yaml
+++ b/scripts/media.yaml
@@ -1,26 +1,19 @@
-play_radio_downstairs:
+play_radio:
   sequence:
     - service: media_player.play_media
       data_template:
-        entity_id: media_player.downstairs_speakers
+        entity_id: '{{ media_player }}'
         media_content_type: music
         media_content_id: >
-          {% if is_state("input_select.play_radio_downstairs", "Český rozhlas Radiožurnál") %}https://ice7.radia.cz/cro1-128.aac
-          {% elif is_state("input_select.play_radio_downstairs", "Rádio Krokodýl") %}http://icecast4.play.cz/krokodyl128.mp3
+          {% if is_state(input_select, "Český rozhlas Radiožurnál") %}https://ice7.radia.cz/cro1-128.aac
+          {% elif is_state(input_select, "Rádio Krokodýl") %}http://icecast4.play.cz/krokodyl128.mp3
           {% else %}none
           {% endif %}
-
-play_radio_kids_room:
-  sequence:
-    - service: media_player.play_media
-      data_template:
-        entity_id: media_player.kids_room_speaker
-        media_content_type: music
-        media_content_id: >
-          {% if is_state("input_select.play_radio_kids_room", "Český rozhlas Radiožurnál") %}https://ice7.radia.cz/cro1-128.aac
-          {% elif is_state("input_select.play_radio_kids_room", "Rádio Krokodýl") %}http://icecast4.play.cz/krokodyl128.mp3
-          {% else %}none
-          {% endif %}
+    - delay: '00:00:05'
+    - service: input_select.select_option
+      data:
+        entity_id: '{{ input_select }}'
+        option: 'Select radio'
 
 turn_xbox_off:
   sequence:
