--- a/scripts/media.yaml
+++ b/scripts/media.yaml
@@ -17,6 +17,12 @@ play_radio:
 
 play_white_noises:
   sequence:
+    - condition:
+      condition: not
+      conditions:
+        - condition: state
+          entity_id: '{{ input_select }}'
+          state: 'Select noise'
     - service: media_player.play_media
       data_template:
         entity_id: '{{ media_player }}'
