--- a/scripts/media.yaml
+++ b/scripts/media.yaml
@@ -15,6 +15,21 @@ play_radio:
         entity_id: '{{ input_select }}'
         option: 'Select radio'
 
+play_white_noises:
+  sequence:
+    - condition: template
+      value_template: '{{ not is_state(input_select, "Select noise") }}'
+    - service: media_player.play_media
+      data_template:
+        entity_id: '{{ media_player }}'
+        media_content_type: music
+        media_content_id: '{{ white_noise_media_path }}/{{ states(input_select) }}.mp3'
+    - delay: '00:00:05'
+    - service: input_select.select_option
+      data:
+        entity_id: '{{ input_select }}'
+        option: 'Select noise'
+
 turn_xbox_off:
   sequence:
     - condition: template
