--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -83,10 +83,11 @@
   trigger:
   - minutes: /1
     platform: time_pattern
-  condition: template
-    value_template: >
-      {% set time = states('input_datetime.heating_on')%}
-      {% set now = now().strftime("%H:%M:%S") %}
-      {{ time > now and is_state('input_boolean.preheating', 'on') }}
+  condition:
+    - condition: template
+        value_template: >
+          {% set time = states('input_datetime.heating_on')%}
+          {% set now = now().strftime("%H:%M:%S") %}
+          {{ time > now and is_state('input_boolean.preheating', 'on') }}
   action:
     - service: script.heating_early_morning
