--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -11,9 +11,17 @@ set_thermostat:
       data_template:
         entity_id: "{{ entity_id }}"
         temperature: "{{ temperature }}"
+    - service: system_log.write
+      data:
+        message: "{{ entity_id }} was set to {{ temperature }}"
+        level: info
 
 heating_early_morning:
   sequence:
+    - service: system_log.write
+      data:
+        message: heating_early_morning was triggered
+        level: info
     - service: script.set_thermostat
       data:
         entity_id: climate.living_room
