--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -68,6 +68,18 @@
   action:
     - service: script.restart_tado
 
+- alias: Heating - Preheating On
+  trigger:
+    platform: time
+    at: "03:00:00"
+  condition:
+    - condition: state
+      entity_id: group.everyone
+      state: home
+  action:
+    - service: input_boolean.turn_on
+      entity_id: input_select.preheating
+
 - alias: Heating - Refresh Start Time
   trigger:
   - minutes: /5
