Fixing service names and entity types

--- a/scripts/scripts.yaml
+++ b/scripts/scripts.yaml
@@ -39,7 +39,7 @@ morning:
 bedtime:
   sequence:
     - service: script.heating_night
-    - service: input_boolean.turn_off
+    - service: input_boolean.turn_on
       entity_id: input_select.night_mode
     - service: script.sunset_bedroom
     - service: script.hallway_off
