--- a/automations/heating.yaml
+++ b/automations/heating.yaml
@@ -78,7 +78,7 @@
       state: home
   action:
     - service: input_boolean.turn_on
-      entity_id: input_select.preheating
+      entity_id: input_boolean.preheating
 
 - alias: Heating - Refresh Start Time
   trigger:
