--- a/automations/lights.yaml
+++ b/automations/lights.yaml
@@ -86,7 +86,7 @@
     data_template:
       entity_id: light.bathroom_light
       brightness_pct: >
-        {% if is_state("input_select.night_mode", "on") %}5
+        {% if is_state("input_boolean.night_mode", "on") %}5
         {% else %}100
         {% endif %}
 
