Turn preheating off in the morning

--- a/scripts/heating.yaml
+++ b/scripts/heating.yaml
@@ -46,6 +46,8 @@ heating_morning:
         temperature: 19
     - service: climate.turn_off
       entity_id: climate.bedroom
+    - service: input_boolean.turn_off
+      entity_id: input_boolean.preheating
 
 heating_work:
   sequence:
